    - Breaking changes
        - Finder#createTarget() methods are now all protected. The 
          findTarget() method is now public. Suggested by Leigh Klotz. 
    - Enhancements
        - Added a getItemIterator() on RestletFileUpload to facilitate
          access to parts in streaming mode. Suggested by Paul Austin.
        - The default SAX handler has been implemented to log 
          validation information. Contributed by Raif S. Naffah. 
    - API changes
        - Added organization description classes 
          (org.restlet.security.Organization, User, Group). Added 
          "organizations" property to Component.
        - Added Role class and "roles" property to Application.
        - Refactored the security package introduce in 1.2 M1 based on
          community feed-back.
        - Added "roleMappings" property to Context.
        - Reverted represent*() auto-matching support for further 
          discussions. Suggested by Tim Peierls.
        - Added constuctors with feed URI in the Feed class of the Atom 
          extension.
        - Added "indent" property to DomRepresentation. Suggested by
          Cliff Binstock.
        - Added support of Shared Key and Shared Key Lite authentication 
          schemes developped by Microsoft. Suggested by Steve Sfartz.
        - WadlApplication now invokes the findTarget() method on Finder 
          instances instead of the createTarget() one. 
          Suggested by Leigh Klotz. 
     - Misc
        - Upgraded Simple server to version 4.1.2. 
          Contributed by Niall Gallagher.
        - Fixed Javadocs typos in Router and Resource. Contributed by
          Raif S. Naffah.

- 1.2 Milestone 1 (2009-01-23)
    - Breaking changes
        - The engine has been moved from "com.noelios.restlet" to
          the "org.restlet.engine" package, simplifying the packaging.
        - All engine extensions have been moved to "org.restlet.ext"
          packages.